# Projects

1st Year/2nd Semester/LI2/: README.md
1st Year/2nd Semester/LI2/Project/: Game.c  Game.h  Guns.c  Guns.h  Main.c  Makefile  Map.c  Map.h  Menu.c  Menu.h  Mobs.c  Mobs.h  Player.c  Player.h  Structs.h  game  jogo  main  scoreboard_file.txt  scoreboard_file_desafio.txt  xinstrucoes.txt
2nd Year/2nd semester/SO/: .gitignore  LICENSE  Makefile  README.md  addGdatasetMetadata.sh  efficiencyAnalysis.sh
2nd Year/2nd semester/SO/include/: cache.h  server_helpers.h  utils.h
2nd Year/2nd semester/SO/src/: cache.c  dclient.c  dserver.c  server_helpers.c  utils.c
3rd Year/1st Semester/DSS/: ReadMe.md
3rd Year/1st Semester/DSS/Project/: .gitignore  ReadMe.md
3rd Year/1st Semester/DSS/Project/Fase1/: TrabalhoPratico.vpp  Use_Cases_DSS.xlsx
3rd Year/1st Semester/DSS/Project/final/: build.gradle
3rd Year/1st Semester/IA/: 1_entrega.json  3_entregas.json  Formulação do Problema.docx  Grafo.py  Node.py  Vehicle.py  carregar_dados_portugal.py  main.py  nodoproject.py  portugal.json
3rd Year/1st Semester/LI4/: README.md
3rd Year/1st Semester/LI4/Project/MontagemBelasPizzas/: MontagemBelasPizzas.sln
3rd Year/1st Semester/SD/: README.md  settings.gradle.kts  statistics.py  test_config.json
3rd Year/1st Semester/SD/client/: build.gradle.kts
3rd Year/1st Semester/SD/common/: build.gradle.kts
3rd Year/1st Semester/SD/server/: build.gradle.kts
3rd Year/2nd Semester/ADI/: README.md
3rd Year/2nd Semester/CG/: README.md
3rd Year/2nd Semester/CG/Project/: .gitignore  CMakeLists.txt  README.md
3rd Year/2nd Semester/CG/Project/scripts/compile/: build.sh  clean.sh  rebuild.sh
3rd Year/2nd Semester/CG/Project/scripts/phase1/: ferrari_p1.sh  helix1_p1.sh  plane1_p1.sh  porsche_p1.sh  spider_p1.sh  test1_p1.sh  test2_p1.sh  test3_p1.sh  test4_p1.sh  test5_p1.sh  torus1_p1.sh
3rd Year/2nd Semester/CG/Project/scripts/phase2/: solar_system.sh  test1_p2.sh  test2_p2.sh  test3_p2.sh  test4_p2.sh
3rd Year/2nd Semester/CG/Project/src/: CMakeLists.txt
3rd Year/2nd Semester/CG/Project/src/engine/: CMakeLists.txt
3rd Year/2nd Semester/CG/Project/src/engine/include/: camera.hpp  catmull_curve.hpp  configuration.hpp  group.hpp  light.hpp  material.hpp  model.hpp  parse.hpp  window.hpp
3rd Year/2nd Semester/CG/Project/src/engine/src/: camera.cpp  catmull_curve.cpp  configuration.cpp  group.cpp  main.cpp  model.cpp  parse.cpp  window.cpp
3rd Year/2nd Semester/CG/Project/src/generator/: CMakeLists.txt
3rd Year/2nd Semester/CG/Project/src/generator/include/: box.hpp  cone.hpp  helix.hpp  patch.hpp  plane.hpp  solar.hpp  sphere.hpp  torus.hpp
3rd Year/2nd Semester/CG/Project/src/generator/src/: box.cpp  cone.cpp  helix.cpp  main.cpp  patch.cpp  plane.cpp  solar.cpp  sphere.cpp  torus.cpp
3rd Year/2nd Semester/CG/Project/src/patches/: comet.patch
3rd Year/2nd Semester/CG/Project/src/scenes/our_tests/: ferrari.xml  porsche.xml  solar_system.xml  spider.xml  test_1_helix1.xml  test_1_plane1.xml  test_1_torus1.xml  test_comet.xml  test_p4_box1.xml  test_p4_cone1.xml  test_p4_helix1.xml  test_p4_plane1.xml  test_p4_teapot1.xml  test_p4_torus1.xml
3rd Year/2nd Semester/CG/Project/src/shared/: CMakeLists.txt
3rd Year/2nd Semester/CG/Project/src/shared/include/: fileUtils.hpp  point.hpp  point2d.hpp  transform.hpp  utils.hpp
3rd Year/2nd Semester/CG/Project/src/shared/src/: fileUtils.cpp  utils.cpp
3rd Year/2nd Semester/CG/Project/toolkits/: CMakeCache.txt
3rd Year/2nd Semester/IPM/: README.md
3rd Year/2nd Semester/IPM/Project/: README.md
3rd Year/2nd Semester/PL/: README.md
3rd Year/2nd Semester/PL/Projeto/: README.md  lexer.py  main.py  parser.py  relatorio.md
4th Year/ASMa/: README.md  requirements.txt
4th Year/ASMa/src/core/: config.py  models.py  protocols.py  spade_utils.py  utils.py
4th Year/ASMa/src/scenarios/: run_appointments_stress.py  run_chatbot_appointments.py  run_emergency_basic.py  run_emergency_multi_patients.py  run_full_system_debug.py  run_full_system_demo.py  run_monitoring_to_emergency.py  test_spade_ping.py
4th Year/DAA/: .gitignore  LICENSE  README.md  requirements.txt
4th Year/DAA/src/: main.py  utils.py
4th Year/DAA/src/Datasets/: test_data.csv
4th Year/ESR/: README.md
4th Year/ESR/core/: CenarioTeste1.imn  CenarioTeste2.imn  TopologiaGeral.imn
4th Year/ESR/src/: config.py
4th Year/ESR/src/client/: client.py  client_gui.py  client_net_loop.py  client_stream.py  client_ui.py  main.py
4th Year/ESR/src/network/: barcelona.json  braga.json  fernando.json  gui.json  lisboa.json  lopitos.json  netflix.json  palma.json  primevideo.json  sara.json  sevilha.json  zita.json
4th Year/ESR/src/protocols/: ack_packet.py  control_types.py  flooding_packet.py  heartbeat_packet.py  nack_packet.py  neighbor_control_packet.py  route_withdraw_packet.py  rtp_packet.py  stream_list_packet.py  stream_request_packet.py
4th Year/ESR/src/scripts/: script.py  script.sh
4th Year/ESR/src/server/: main.py  server.py  server_control.py  server_net_loop.py  server_streaming.py
4th Year/ESR/src/streams/: stream_session_packet.py  video_stream.py
4th Year/ESR/src/transport/: __init__.py  heartbeat.py  main.py  node.py  reliable_ctrl.py  routing.py  streaming.py
(+818 files in other folders)
